# Atividades-Est.D-ListaI

./: CMakeLists.txt  README.md
exerciseI/: main.c
exerciseII/: main.c
exerciseIII/: main.c
exerciseIV/: main.c
exerciseV/: main.c
