cmake_minimum_required(VERSION 3.29)
project(br_com_silvera_listai C)

set(CMAKE_C_STANDARD 11)

add_executable(exerciseI exerciseI/main.c)
add_executable(exerciseII exerciseII/main.c)
add_executable(exerciseIII exerciseIII/main.c)
add_executable(exerciseIV exerciseIV/main.c)
add_executable(exerciseV exerciseV/main.c)